update related channels list

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <a href="https://www.youtube.com/channel/UCAiKrZDrrSJnLpDM-zEVyng">DoubleMoose</a>
                 <a href="https://www.youtube.com/user/markiplierGAME">Markiplier</a>
                 <a href="https://www.youtube.com/user/jacksepticeye">jacksepticeye</a>
-                <a href="https://www.youtube.com/user/tseries">T-Series</a>
-                <a href="https://www.youtube.com/user/MatthewPatrick13">The Game Theorists</a>
-                <a href="https://www.youtube.com/user/VanossGaming">VanossGaming</a>
+                <a href="https://www.youtube.com/user/CraftBattleDuty">Lachlan</a>
+                <a href="https://www.youtube.com/channel/UCw1SQ6QRRtfAhrN_cjkrOgA">LazarBeam</a>
+                <a href="https://www.youtube.com/user/TTfue">Tfue</a>
                 <a href="https://www.youtube.com/user/IGNentertainment">IGN</a>
             </div>
         </header>
