add shynet selfhosted analytics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <title>PewHub</title>
         <link rel="stylesheet" href="./app.min.css">
         <script src="./app.js"></script>
+        <!-- -->
+        <noscript><img src="https://analytics.apps.aremy.world/ingress/9adc9c51-5f16-42e7-bb40-2bd0f0078927/pixel.gif"></noscript>
+        <script defer src="https://analytics.apps.aremy.world/ingress/9adc9c51-5f16-42e7-bb40-2bd0f0078927/script.js"></script>
     </head>
     <body>
         <header id="pew-network">
